--- a/MyCity4Kids/MyCity4Kids/res/drawable/profile_featured_collection_bg.xml
+++ b/MyCity4Kids/MyCity4Kids/res/drawable/profile_featured_collection_bg.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke
         android:width="1dp"
-        android:color="@color/grey_faded" />
+        android:color="#DDD7D7" />
 
-    <solid android:color="@color/light_grey1" />
+    <solid android:color="#F9F9F9" />
 
     <padding
         android:left="1dp"
