--- a/MyCity4Kids/MyCity4Kids/res/layout/article_listing_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/article_listing_item.xml
@@ -25,7 +25,7 @@
                 android:id="@+id/txvArticleTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_toLeftOf="@+id/forYouInfoLL"
+                android:layout_toStartOf="@+id/forYouInfoLL"
                 android:ellipsize="end"
                 android:maxLines="2"
                 android:padding="10dp"
@@ -76,9 +76,9 @@
                     android:layout_gravity="bottom"
                     android:clickable="true"
                     android:gravity="bottom"
-                    android:paddingLeft="10dp"
+                    android:paddingStart="10dp"
                     android:paddingTop="8dp"
-                    android:paddingRight="5dp"
+                    android:paddingEnd="5dp"
                     android:paddingBottom="5dp"
                     android:singleLine="true"
                     android:text="@string/author_name"
@@ -91,12 +91,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/txvAuthorName"
-                    android:layout_alignLeft="@+id/txvAuthorName"
-                    android:layout_marginLeft="9dp"
-                    android:drawableLeft="@drawable/ic_views"
+                    android:layout_alignStart="@+id/txvAuthorName"
+                    android:layout_marginStart="9dp"
+                    android:drawableStart="@drawable/ic_views"
                     android:drawablePadding="4dp"
                     android:gravity="center"
-                    android:paddingLeft="2dp"
+                    android:paddingStart="2dp"
                     android:text="0"
                     android:textColor="@color/article_listing.stats"
                     android:textSize="12sp"
@@ -109,9 +109,9 @@
                     android:layout_below="@id/txvAuthorName"
                     android:layout_alignTop="@+id/viewCountTextView"
                     android:layout_alignBottom="@+id/viewCountTextView"
-                    android:layout_marginLeft="11dp"
-                    android:layout_toRightOf="@+id/viewCountTextView"
-                    android:drawableLeft="@drawable/ic_comments"
+                    android:layout_marginStart="11dp"
+                    android:layout_toEndOf="@+id/viewCountTextView"
+                    android:drawableStart="@drawable/ic_comments"
                     android:drawablePadding="4dp"
                     android:gravity="top"
                     android:text="0"
@@ -143,7 +143,6 @@
                     android:layout_height="wrap_content"
                     android:layout_alignTop="@+id/txvAuthorName"
                     android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
                     android:paddingLeft="10dp"
                     android:paddingTop="15dp"
                     android:paddingRight="10dp"
@@ -153,15 +152,27 @@
                     android:visibility="gone" />
 
                 <ImageView
+                    android:id="@+id/shareArticleImageView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignTop="@+id/txvAuthorName"
+                    android:layout_alignParentEnd="true"
+                    android:paddingLeft="10dp"
+                    android:paddingTop="15dp"
+                    android:paddingRight="10dp"
+                    android:paddingBottom="10dp"
+                    android:src="@drawable/ic_share_icon"
+                    android:tint="@color/app_red"
+                    android:visibility="gone" />
+
+                <ImageView
                     android:id="@+id/watchLaterImageView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignStart="@+id/bookmarkArticleImageView"
-                    android:layout_alignLeft="@+id/bookmarkArticleImageView"
                     android:layout_alignTop="@+id/txvAuthorName"
                     android:layout_alignBottom="@+id/bookmarkArticleImageView"
                     android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
                     android:paddingLeft="10dp"
                     android:paddingTop="15dp"
                     android:paddingRight="10dp"
@@ -174,7 +185,7 @@
                 android:id="@+id/forYouInfoLL"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
                 android:orientation="horizontal"
                 android:paddingLeft="10dp"
                 android:paddingTop="12dp"
