--- a/MyCity4Kids/MyCity4Kids/res/layout/user_collections_grid_view.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/user_collections_grid_view.xml
@@ -1,25 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/space_10"
-    android:elevation="@dimen/space_10">
+    android:background="@color/white"
+    android:orientation="vertical">
 
-    <LinearLayout
+    <RelativeLayout
+        android:id="@+id/imvAuthorThumbContainer"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/space_16"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
         android:background="@color/white"
         android:orientation="vertical">
 
-        <RelativeLayout
-            android:id="@+id/imvAuthorThumbContainer"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/imageCardView"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:background="@color/white"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/space_5"
+            app:cardElevation="@dimen/space_10">
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/tagImageView"
@@ -28,24 +28,26 @@
                 android:background="@drawable/shape_collection_grid_view_rounded"
                 android:scaleType="fitXY"
                 android:src="@drawable/default_article" />
+        </androidx.cardview.widget.CardView>
 
-            <com.mycity4kids.widget.CustomFontTextView
-                android:id="@+id/topicsNameTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/tagImageView"
-                android:layout_centerHorizontal="true"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:ellipsize="end"
-                android:gravity="center"
-                android:maxLines="1"
-                android:text="@string/topics"
-                android:textColor="@color/campaign_4A4A4A"
-                android:textSize="13sp"
-                app:fontName="OpenSans-Regular.ttf" />
-        </RelativeLayout>
+        <com.mycity4kids.widget.CustomFontTextView
+            android:id="@+id/topicsNameTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/imageCardView"
+            android:layout_centerHorizontal="true"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:ellipsize="end"
+            android:gravity="center"
+            android:maxLines="1"
+            android:padding="@dimen/space_7"
+            android:text="@string/topics"
+            android:textColor="@color/campaign_4A4A4A"
+            android:textSize="13sp"
+            app:fontName="OpenSans-Regular.ttf" />
+    </RelativeLayout>
 
 
-    </LinearLayout>
-</androidx.cardview.widget.CardView>
+</LinearLayout>
+
