--- a/MyCity4Kids/MyCity4Kids/res/layout/edit_collection_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/edit_collection_activity.xml
@@ -48,6 +48,7 @@
         android:layout_marginRight="@dimen/space_16"
         android:background="@drawable/dark_border_rounded_corner"
         android:padding="15dp"
+        android:maxLength="100"
         android:textColor="@color/campaign_4A4A4A"
         android:textSize="@dimen/space_16" />
 
@@ -136,6 +137,29 @@
         android:textColor="@color/white"
         android:textSize="@dimen/space_18"
         app:fontName="oswald_regular.ttf" />
+
+    <com.facebook.shimmer.ShimmerFrameLayout
+        android:id="@+id/shimmer1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white"
+        android:visibility="visible"
+        app:duration="1000">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <include layout="@layout/mainshimmer_layout" />
+
+            <include layout="@layout/mainshimmer_layout" />
+
+            <include layout="@layout/mainshimmer_layout" />
+
+        </LinearLayout>
+
+    </com.facebook.shimmer.ShimmerFrameLayout>
 
 
 </RelativeLayout>
