--- a/MyCity4Kids/MyCity4Kids/res/layout/user_created_collections_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/user_created_collections_fragment.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="#F9F9F9"
     android:orientation="vertical">
 
     <com.mycity4kids.ui.videochallengenewui.ExpandableHeightGridView
@@ -12,7 +13,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginRight="16dp"
-        android:background="@color/white"
+        android:background="#F9F9F9"
         android:horizontalSpacing="16dp"
         android:nestedScrollingEnabled="true"
         android:numColumns="2"
@@ -20,6 +21,15 @@
         android:stretchMode="columnWidth"
         android:verticalSpacing="16dp"
         android:visibility="visible" />
+
+    <com.mycity4kids.widget.CustomFontTextView
+        android:id="@+id/notCreatedTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:text="you haven't created any collection yet"
+        android:textColor="@color/black"
+        android:visibility="gone" />
 
     <RelativeLayout
         android:id="@+id/relativeLoadingView"
@@ -59,5 +69,25 @@
             android:layout_toLeftOf="@id/txvLoadMore"
             android:src="@drawable/progress_spinner" />
     </RelativeLayout>
+
+    <com.facebook.shimmer.ShimmerFrameLayout
+        android:id="@+id/shimmer1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="visible"
+        app:duration="1000">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <include layout="@layout/mainshimmer_layout" />
+
+            <include layout="@layout/mainshimmer_layout" />
+
+        </LinearLayout>
+
+    </com.facebook.shimmer.ShimmerFrameLayout>
 
 </RelativeLayout>
