--- a/MyCity4Kids/MyCity4Kids/res/menu/delete_edit_collection_menu.xml
+++ b/MyCity4Kids/MyCity4Kids/res/menu/delete_edit_collection_menu.xml
@@ -3,14 +3,13 @@
     <item
         android:id="@+id/edit_collection"
         android:actionMenuTextColor="@color/app_red"
-        android:icon="@drawable/ic_edit_title"
         android:title="Edit Collection"
+        android:visible="false"
 
         />
     <item
         android:id="@+id/delete_collection"
         android:actionMenuTextColor="@color/app_red"
-        android:icon="@drawable/ic_disable_comments_icon"
         android:title="Delete Collection" />
 
 </menu>
