--- a/MyCity4Kids/MyCity4Kids/res/layout/add_collection_name_pop_up.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/add_collection_name_pop_up.xml
@@ -4,88 +4,74 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/space_15"
+        android:layout_marginTop="@dimen/space_15"
+        android:layout_marginEnd="@dimen/space_15"
+        android:background="@drawable/rootlayout_with_rounded_corner">
 
-        <Space
-            android:id="@+id/space"
+
+        <com.mycity4kids.widget.CustomFontTextView
+            android:id="@+id/addCollectionNameTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="@id/cancle"
-            app:layout_constraintEnd_toEndOf="@id/cancle"
-            app:layout_constraintHorizontal_bias=".5"
-            app:layout_constraintStart_toStartOf="@id/cancle"
-            app:layout_constraintTop_toTopOf="@id/cancle"
-            app:layout_constraintVertical_bias=".5" />
+            android:layout_marginStart="@dimen/space_16"
+            android:layout_marginTop="@dimen/space_20"
+            android:text="Add collection name"
+            android:textColor="@color/campaign_515151"
+            android:textSize="20sp"
+            app:fontName="Helvetica Bold.ttf" />
 
 
-        <RelativeLayout
+        <com.mycity4kids.widget.CustomFontEditText
+            android:id="@+id/collectionNameEditTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/addCollectionNameTextView"
+            android:layout_marginStart="@dimen/space_16"
+            android:layout_marginTop="15dp"
+            android:layout_marginEnd="@dimen/space_16"
+            android:background="@drawable/dark_border_rounded_corner"
+            android:gravity="center_vertical"
+            android:hint="eg: My top 10 blogs"
+            android:maxLength="100"
+            android:padding="@dimen/space_10"
+            android:textColor="@color/campaign_4A4A4A"
+            android:textSize="@dimen/space_16" />
+
+        <com.mycity4kids.widget.CustomFontTextView
+            android:id="@+id/confirmTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/rootlayout_with_rounded_corner"
-            app:layout_constraintEnd_toStartOf="@id/space"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/space">
+            android:layout_below="@id/collectionNameEditTextView"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="@dimen/space_16"
+            android:layout_marginBottom="@dimen/space_30"
+            android:background="@drawable/update_profile_bg"
+            android:gravity="center"
+            android:paddingLeft="20dp"
+            android:paddingTop="@dimen/space_10"
+            android:paddingRight="20dp"
+            android:paddingBottom="@dimen/space_10"
+            android:text="Confirm"
+            android:textAllCaps="true"
+            android:textColor="@color/white"
+            android:textSize="14sp"
+            app:fontName="Helvetica Bold.ttf" />
 
 
-            <com.mycity4kids.widget.CustomFontTextView
-                android:id="@+id/addCollectionNameTextView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/space_30"
-                android:layout_marginTop="@dimen/space_50"
-                android:text="Add collection name"
-                android:textColor="@color/campaign_515151"
-                android:textSize="20sp"
-                app:fontName="Helvetica Bold.ttf" />
+    </RelativeLayout>
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/cancel"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_alignParentEnd="true"
+        android:src="@drawable/ic_close_pop_up"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
-            <com.mycity4kids.widget.CustomFontEditText
-                android:id="@+id/collectionNameEditTextView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/addCollectionNameTextView"
-                android:layout_marginLeft="@dimen/space_30"
-                android:layout_marginTop="15dp"
-                android:layout_marginRight="@dimen/space_15"
-                android:background="@drawable/dark_border_rounded_corner"
-                android:gravity="center_vertical"
-                android:hint="eg: My top 10 blogs"
-                android:maxLength="100"
-                android:padding="@dimen/space_10"
-                android:textColor="@color/campaign_4A4A4A"
-                android:textSize="@dimen/space_16" />
-
-            <com.mycity4kids.widget.CustomFontTextView
-                android:id="@+id/confirmTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/collectionNameEditTextView"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="@dimen/space_16"
-                android:layout_marginBottom="@dimen/space_30"
-                android:background="@drawable/update_profile_bg"
-                android:gravity="center"
-                android:paddingLeft="20dp"
-                android:paddingTop="@dimen/space_10"
-                android:paddingRight="20dp"
-                android:paddingBottom="@dimen/space_10"
-                android:text="Confirm"
-                android:textAllCaps="true"
-                android:textColor="@color/white"
-                android:textSize="14sp"
-                app:fontName="Helvetica Bold.ttf" />
-
-
-        </RelativeLayout>
-
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/cancle"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:src="@drawable/cross_icon_circle_background_black"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
 </RelativeLayout>
