collapse toolbar added in edit collection activity

--- a/MyCity4Kids/MyCity4Kids/res/drawable/cross_icon_circle_background_black.xml
+++ b/MyCity4Kids/MyCity4Kids/res/drawable/cross_icon_circle_background_black.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="oval">
-            <solid android:color="#DADADA" />
+            <solid android:color="#9B9B9B" />
         </shape>
     </item>
     <item
